<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/baterryText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/batteryStatus"
        android:layout_width="69dp"
        android:layout_height="53dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_battery_charging_full_24"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/batterytext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:padding="5dp"
        android:text="@string/battery_percentage"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/batteryPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:text="@string/percentage"
        android:textColor="#008000"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/batterytext" />

    <TextView
        android:id="@+id/displayMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:padding="5dp"
        android:text="@string/it_will_notify_you_after_every_10_of_charged"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchForRing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_to_get_alert"
        android:layout_marginTop="16dp"
        android:padding="4dp"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:textSize="18sp"
        android:thumb="@drawable/thumb"
        app:track="@drawable/track"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/batteryPercentage"

        />


</androidx.constraintlayout.widget.ConstraintLayout>